--- a/page2.htm
+++ b/page2.htm
@@ -47,7 +47,7 @@
 
 <hr align="centre">
 
-<a href="index.htm">Back to First Page</a>
+<a href="hello4.htm">Back to First Page</a>
 
 </BODY>
 </HTML>
