--- a/page2.htm
+++ b/page2.htm
@@ -23,7 +23,7 @@
 
 <img src="Exceltest.png" alt="Excel Test">
 
-<a href=https://docs.google.com/spreadsheets/d/1LbMrakzyBDllJ1laHAl8WzVYblCF3ubO5cFzcezqi4c/edit#gid=0>Link To Excel</a>
+<a href="https://docs.google.com/spreadsheets/d/1LbMrakzyBDllJ1laHAl8WzVYblCF3ubO5cFzcezqi4c/edit#gid=0">Link To Excel</a>
 
 <P><left>This Excel Spreedsheet shows my abilities to navigate through excel and display data neatly and efficiently. I can use formuals to easily organize data.</left></P>
 
@@ -31,14 +31,22 @@
 
 <a href=https://354229884.wixsite.com/googley-choice>Link To Website</a>
 
+<P><left>This piece of work demonstrates my abilites to use resources and templates to create a website. It displays my graphic design skills and use of things like "AIDA".</left></P>
+
 <P><left>Work Piece 4: Business Letter</left></P>
 
-<a href=https://docs.google.com/document/d/1-jWUrdtqWwXAsOfjQmTWBEKM22xQXwFh0RmmQj-QehU/edit?usp=sharing>Link To Letter</a>
+<a href="https://docs.google.com/document/d/1-jWUrdtqWwXAsOfjQmTWBEKM22xQXwFh0RmmQj-QehU/edit?usp=sharing">Link To Letter</a>
+
+<P><left>This piece of work demonstartes that I can express and communicate my ideas in a professional mammer, with accurate and effient formatting.</left></P>
 
 <P><left>Work Piece 5: Policy</left></P>
 
-<a href=https://www.canva.com/design/DAFwzzFehe8/HpFCqk1tm7nyb4akx3nXGw/edit?utm_content=DAFwzzFehe8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton>Link To Policy</a>
+<a href="https://www.canva.com/design/DAFwzzFehe8/HpFCqk1tm7nyb4akx3nXGw/edit?utm_content=DAFwzzFehe8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Link To Policy</a>
 
+<P><left>This piece of work demonstartes that I can display important pieces of data and present it in a easy, and quick to understand way.</left></P>
+
+<P><left>All these artifacts showcase a variety of skills that o have learned druing my time in the BTT101 course at Campion.</left></P>
+  
 <br>
 <br>
 <br>
