--- a/page2.htm
+++ b/page2.htm
@@ -9,9 +9,9 @@
 
 <BODY>
 
-<P><center>My Page 2 </center></P>
+<P><center><h1>My Work</h1></center></P>
 
-<P><left>Work Piece 1: Canva Project</left></P>
+<P><left><h3>Work Piece 1: Canva Project</h3></left></P>
 
 <img src="canva1.png" alt="Canva Project">
 
