--- a/page2.htm
+++ b/page2.htm
@@ -55,7 +55,7 @@
 
 <hr align="centre">
 
-<a href="hello4.htm">Back to First Page</a>
+<a href="index.html">Back to First Page</a>
 
 </BODY>
 </HTML>
