--- a/page2.htm
+++ b/page2.htm
@@ -19,7 +19,7 @@
 
 <P><left>This is one of my best Canva works as it was one of the first times in the class that I’ve used a template. Canva has become a quick and easy tool for me to present ideas and presentations as they have a variety of templates to choose from.</left></P>
 
-<P><left>Work Piece 2: Excel Project</left></P>
+<P><left><h3>Work Piece 2: Excel Project</h3></left></P>
 
 <img src="Exceltest.png" alt="Excel Test">
 
@@ -27,19 +27,19 @@
 
 <P><left>This Excel Spreedsheet shows my abilities to navigate through excel and display data neatly and efficiently. I can use formuals to easily organize data.</left></P>
 
-<P><left>Work Piece 3: Wix Website</left></P>
+<P><left><h3>Work Piece 3: Wix Website</h3></left></P>
 
 <a href=https://354229884.wixsite.com/googley-choice>Link To Website</a>
 
 <P><left>This piece of work demonstrates my abilites to use resources and templates to create a website. It displays my graphic design skills and use of things like "AIDA".</left></P>
 
-<P><left>Work Piece 4: Business Letter</left></P>
+<P><left><h3>Work Piece 4: Business Letter</h3></left></P>
 
 <a href="https://docs.google.com/document/d/1-jWUrdtqWwXAsOfjQmTWBEKM22xQXwFh0RmmQj-QehU/edit?usp=sharing">Link To Letter</a>
 
 <P><left>This piece of work demonstartes that I can express and communicate my ideas in a professional mammer, with accurate and effient formatting.</left></P>
 
-<P><left>Work Piece 5: Policy</left></P>
+<P><left><h3>Work Piece 5: Policy</h3></left></P>
 
 <a href="https://www.canva.com/design/DAFwzzFehe8/HpFCqk1tm7nyb4akx3nXGw/edit?utm_content=DAFwzzFehe8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Link To Policy</a>
 
