--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <font color=navy> 	<!This sets the font colour>
 
-<a href="page2.htm">Page 2</a>
+<nav>
+  <a href="page2.htm">Page 2</a>
+  <a href="#contact">Contact</a>
+</nav>
 
 <P><center><h1>The Googley Choice</h1></center></P>
 
