--- a/page2.htm
+++ b/page2.htm
@@ -55,7 +55,10 @@
 
 <hr align="centre">
 
-<a href="index.html">Back to First Page</a>
+<nav>
+  <a href="index.html">Back To First Page</a>
+  <a href="#contact">Contact</a>
+</nav>
 
 </BODY>
 </HTML>
