--- a/page2.htm
+++ b/page2.htm
@@ -15,7 +15,7 @@
 
 <img src="canva1.png" alt="Canva Project">
 
-<a href="hhttps://www.canva.com/design/DAFwHzE9F54/9bGlVlcbVkfimt4rLdI_Kw/edit?utm_content=DAFwHzE9F54&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Link To Canva</a>
+<a href="https://www.canva.com/design/DAFwHzE9F54/9bGlVlcbVkfimt4rLdI_Kw/edit?utm_content=DAFwHzE9F54&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Link To Canva</a>
 
 <P><left>This is one of my best Canva works as it was one of the first times in the class that I’ve used a template. Canva has become a quick and easy tool for me to present ideas and presentations as they have a variety of templates to choose from.</left></P>
 
