--- a/page2.htm
+++ b/page2.htm
@@ -25,7 +25,7 @@
 
 <a href="https://docs.google.com/spreadsheets/d/1LbMrakzyBDllJ1laHAl8WzVYblCF3ubO5cFzcezqi4c/edit#gid=0">Link To Excel</a>
 
-<P><left>This Excel Spreedsheet shows my abilities to navigate through excel and display data neatly and efficiently. I can use formuals to easily organize data.</left></P>
+<P><left>This Excel Spreedsheet shows my abilities to navigate through excel and display data neatly and efficiently. I can use formuals, create graphs, tables, etc to easily organize data.</left></P>
 
 <P><left><h3>Work Piece 3: Wix Website</h3></left></P>
 
