--- a/page2.htm
+++ b/page2.htm
@@ -45,7 +45,7 @@
 
 <P><left>This piece of work demonstartes that I can display important pieces of data and present it in a easy, and quick to understand way.</left></P>
 
-<P><left>All these artifacts showcase a variety of skills that I have learned druing my time in the BTT101 course at Campion.</left></P>
+<P><left>All these artifacts showcase a variety of skills that I have learned during my time in the BTT101 course at Campion.</left></P>
   
 <br>
 <br>
