--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div style="text-align: center">
         <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FCompany&psig=AOvVaw0mZYjyY52M53NVJusdpdiG&ust=1705183465676000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCJiNycjt2IMDFQAAAAAdAAAAABAD" class="w3-margin" alt="image" width="150px" height="150px" style="border-radius: 50%;">
         <p><span class="name w3-padding w3-pink w3-round" style="font-weight: bolder;">Priyananda's Website:</span></p>
-        <p style="font-weight: bolder;">About Me!</p>
+        <p style="font-weight: bolder;">E-Portfolio!</p>
       </div>
       
   <p style="font-weight: bolder;">My name is Priyananda S., and I am a  grade 9 student at St. Edmund Campion. I have taken a course called “Info and Com Tech in Business” where I have learned things like how to code websites using HTML, how to create a website through templates, write business letters, etc. We learned how to use software applications like Canva, Microsoft Excel, Spreadsheet, Google Slides, and more! This website was created using the HTML coding language we learned in class to show off some of my best work. Recently, we have been focusing more on websites, web page designs, and things like that. My first website was made on wix. It was made with a template, and had different web pages attached, like contact page, about page, store page, etc. That website was based on selling concert tickets, the artists i chose to represent are people like Taylor Swift, ACDC, Travis Scott, etc. </p>
